🐛 Fix noHeadingNumbering for toc + header for blog on mobile

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -233,8 +233,14 @@ p.contact {
 .blog-header {
   .blog-tags {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
-    margin-bottom: 10px;
+    row-gap: 0;
+    margin-bottom: 1rem;
+    & > * {
+      white-space: nowrap;
+    }
+
     a {
       font-weight: 500;
       font-size: 1.1rem;
@@ -263,9 +269,12 @@ p.contact {
     }
   }
   h1.blog-title {
-    font-size: 2.4rem;
-    margin-bottom: 10px;
-    line-height: 1.2;
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+    line-height: 1;
+    @include screen-md-down {
+      font-size: 2rem;
+    }
   }
   .blog-description {
     opacity: 0.8;
