--- a/src/css/components/_heading.scss
+++ b/src/css/components/_heading.scss
@@ -21,6 +21,12 @@ h4 {
   font-size: $heading-h4-size;
 }
 
+.blog-container {
+  h2, h3 {
+    zoom: 1.1;
+  }
+}
+
 @if $heading-numbering {
   body {
     counter-reset: h2counter;
